# parsehawk

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .trivyaml  AGENTS.md  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md  justfile  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.agents/skills/: fastapi
.github/workflows/: ci-checks.yaml  ci-test.yaml  docs-pages.yaml  enforce-issue-reference.yaml  publish-image.yaml
.speakeasy/: lint.yaml
apps/docs/: .prettierignore  .prettierrc.mjs  README.md  astro.config.mjs  package.json
apps/docs/public/: CNAME  robots.txt
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  api.ts  examples.test.ts  examples.ts  schema.test.ts  schema.ts  schemaBuilder.ts  styles.css  types.ts
docker/: Dockerfile.api  Dockerfile.web  docker-compose.linux.yml  docker-compose.yml  web.nginx.conf
docker/runtime/: Dockerfile.linux-vllm
docs/schemas/: parsehawk-extraction-schema.schema.json
licenses/: bundled-images.toml
openapi/: README.md  export_openapi.py  openapi.yaml  validate_openapi.py
scripts/: check-dev-prereqs.sh  check_bundled_images.py  check_dep_licenses.py  dep_license_exceptions.txt  export_reference_docs.py  speakeasy_lint.sh
services/phoenix/: Dockerfile.phoenix
src/parsehawk/: __init__.py  config.py  logging.py  model_profiles.py  telemetry.py  tracing.py
src/parsehawk/cli/: log_proxy.py  main.py
src/parsehawk/core/: __init__.py
src/parsehawk/server/: container.py
tests/: conftest.py
tests/e2e/: conftest.py  test_e2e_extractors.py  test_e2e_files.py  test_e2e_health.py  test_e2e_jobs.py  test_e2e_schema_validation.py
tests/fixtures/receipt/: receipt.md  receipt.txt  receipt_ground_truth.json  receipt_schema.json
tests/integration/api/: test_api_concurrency.py  test_api_workflow.py
tests/system/: test_cli_lifecycle.py
tests/unit/: test_config.py  test_dockerignore.py  test_logging.py  test_model_profiles.py  test_telemetry.py  test_tracing.py
tests/unit/cli/: test_log_proxy.py  (+1 more)
(+96 files in other folders)
